--- a/.hintrc
+++ b/.hintrc
@@ -5,6 +5,12 @@
   "hints": {
     "meta-viewport": "off",
     "axe/forms": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "axe/language": [
+      "default",
+      {
+        "html-has-lang": "off"
+      }
+    ]
   }
 }
